Use jdk.internal.misc.Unsafe